some editing on home page and add video

--- a/order.html
+++ b/order.html
@@ -24,15 +24,16 @@
 
                 <li>
 
-                    <a href="">HOME</a>
+                    <a href="home.html">HOME</a>
                 </li>
                 <li>
 
-                    <a href="">MENU</a>
+                    <a href="menu.html">MENU</a>
                 </li>
                 <li>
 
-                    <a href="">ORDER</a>
+                    
+                    <a href="order.html">ORDER</a>
                 </li>
             </ul>
         </nav>
@@ -41,16 +42,7 @@
     </header>
     
     <main>
-        <!-- <div>
-
-            <img src="img/5e61bc9f3849d.png" alt="header">
-        </div> -->
-
-        <!-- <img src="IMG/italianFood.jpg" alt="italianFood">
-        <img src="" alt="">
-        <img src="" alt="">
-
-        <video src="istockphoto-504115680-640_adpp_is.mp4"></video> -->
+   
 
 
     </main>
