--- a/home.html
+++ b/home.html
@@ -24,15 +24,15 @@
 
                 <li>
 
-                    <a href="">HOME</a>
+                    <a href="home.html">HOME</a>
                 </li>
                 <li>
 
-                    <a href="">MENU</a>
+                    <a href="menu.html">MENU</a>
                 </li>
                 <li>
 
-                    <a href="">ORDER</a>
+                    <a href="order.html">ORDER</a>
                 </li>
             </ul>
         </nav>
@@ -41,16 +41,21 @@
     </header>
     
     <main>
-        <!-- <div>
+        <div class="main-img">
 
-            <img src="img/5e61bc9f3849d.png" alt="header">
-        </div> -->
+            <img src="img/5e61bc9f3849d.png" alt="header" class="img1">
+            <div class="images">
 
-        <!-- <img src="IMG/italianFood.jpg" alt="italianFood">
-        <img src="" alt="">
-        <img src="" alt="">
+                <img src="IMG/italianFood.jpg" alt="italianFood"  class="img2">
+                <img src="IMG/5e61dff2e362b.png" alt="arabicFood"  class="img3">
+                <img src="IMG/5e61dfce05101.png" alt="westrenFood"  class="img4">
+            </div>
+            
+        </div>
 
-        <video src="istockphoto-504115680-640_adpp_is.mp4"></video> -->
+        <video  controls class="vid">
+            <source src="istockphoto-504115680-640_adpp_is.mp4">
+        </video> 
 
 
     </main>
