edit on img header

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
     <main>
         <div class="main-img">
 
-            <img src="img/5e61bc9f3849d.png" alt="header" class="img1">
+            <img src="IMG/5e61bc9f3849d.png" alt="header" class="img1">
             <div class="images">
 
                 <img src="IMG/italianFood.jpg" alt="italianFood"  class="img2">
