do the conflict

--- a/html/home.html
+++ b/html/home.html
@@ -48,7 +48,7 @@
 
                 <img src="IMG/italianFood.jpg" alt="italianFood"  class="img2">
                 <img src="IMG/5e61dff2e362b.png" alt="arabicFood"  class="img3">
-                <img src="IMG/5e61dfce05101.png" alt="indianFood"  class="img4">
+                <img src="IMG/5e61dfce05101.png" alt="westrenFood"  class="img4">
             </div>
             
         </div>
