edit on header and give it opacity

--- a/order.html
+++ b/order.html
@@ -5,6 +5,7 @@
 
     <title>FoodEnd</title>
     <link rel="stylesheet" href="CSS/home.css">
+    <link rel="shortcut icon" href="IMG/logoTap.png" type="image/png" sizes="152x152">
     <link rel="117-1174234_png-file-svg-food-png-icon-doodle-clipart"
         href="IMG/117-1174234_png-file-svg-food-png-icon-doodle-clipart.png" type="image/png" sizes="152x152">
 
