edit on menu.css

--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Condensed&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -45,6 +46,7 @@
     </header>
     
     <main>
+        <div class="main-img"> </div>
         <div id="uniqLogo" >
             <br/><br/><br/>
             <div class="ribbon-wrapper"><div class="glow">&nbsp;</div>
@@ -86,7 +88,7 @@
     </main>
 
     <footer>
-        <p>Copyright &copy;2020 FoodEnd.</p>
+        <p id="p">Copyright &copy;2020 FoodEnd.</p>
     </footer>
 
     <script src="JS/menu.js"></script>
