--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
                   <div class="flip-box-front">
                     <img src="IMG/italianFood.jpg" alt="italianFood" class="img2" id="italianFood">
                   </div>
-                  <div class="flip-box-back">
-                    <h2>Italian Food</h2>
-                    <p>Italian cuisine has its origins in Etruscan, ancient Greek, and ancient Roman
-                        cuisines. Significant changes occurred with the discovery of the New World and the introduction
-                        of potatoes, tomatoes, bell peppers and maize</p>
+                  
+                        <a href="menu.html"><div class="flip-box-back">
+                          <h2>Italian  Food</h2>
+                          <p>Italian cuisine has its origins in Etruscan, ancient Greek, and ancient Roman
+                              cuisines. Significant changes occurred with the discovery of the New World and the introduction
+                              of potatoes, tomatoes, bell peppers and maize</p>
                   </div>
+                </a>
                 </div>
               </div>
 
@@ -81,20 +83,22 @@
                   <div class="flip-box-front">
                     <img src="IMG/arabianFood.png" alt="arabianFood" class="img2" id="arabianFood">
                   </div>
-                  <div class="flip-box-back">
+                  <a href="menu.html"> <div class="flip-box-back">
                     <h2>Arabian Food</h2>
                     <p>Arab cuisine is the cuisine of the Arabs, defined as the various regional
                         cuisines spanning the Arab world, from the Maghreb to the Fertile Crescent and the Arabian
                         Peninsula. The cuisines are often centuries old and reflect the culture of great trading in
                         spices, herbs, and foods.</p>
-                  </div>
+                  </div></a>
+                 
                 </div>
               </div>
               <div class="flip-box">
                 <div class="flip-box-inner">
-                  <div class="flip-box-front">
+                   <div class="flip-box-front">
                     <img src="IMG/indianFood.png" alt="indianFood" class="img2" id="indianFood">
                   </div>
+                  <a href="menu.html">
                   <div class="flip-box-back">
                     <h2>Indian Food</h2>
                     <p>Indian cuisine encompasses a wide variety of regional cuisine native
@@ -103,7 +107,7 @@
                         significantly from each other and use locally available such as: chocolates, herbs,
                         vegetables
                         and fruits. </p>
-                  </div>
+                  </div></a>
                 </div>
               </div>
 
