--- a/menu.html
+++ b/menu.html
@@ -39,6 +39,11 @@
                   
                     <a href="order.html">ORDER</a>
                 </li>
+                <li>
+
+
+                    <a href="about-us.html">ABOUT-US</a>
+                </li>
             </ul>
         </nav>
 
