--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,7 @@
 <head>
 
     <title>FoodEnd</title>
+    <link rel="stylesheet" href="CSS/home.css">
     <link rel="stylesheet" href="CSS/menu.css">
     <link rel="shortcut icon" href="IMG/logoTap.png" type="image/png" sizes="152x152">
     <link rel="117-1174234_png-file-svg-food-png-icon-doodle-clipart"
@@ -104,14 +105,17 @@
     </main>
 
     <footer>
-        <p id="p">Copyright &copy;2020 FoodEnd.</p>
-        <div id="icon">
-            <img src="img/fb-icon.png">
-            <img src="img/gp-icon.png">
-            <img src="img/insta-icon.png">
-            <img src="img/logo.png" height="24px">
-            <img src="img/twit-icon.png">
-          </div>
+        <p id="p">
+          Copyright &copy;2020 FoodEnd
+            
+        </p>
+          <div id="icon">
+          <img src="img/fb-icon.png">
+          <img src="img/gp-icon.png">
+          <img src="img/insta-icon.png">
+          <img src="img/logo.png" height="24px">
+          <img src="img/twit-icon.png">
+        </div>
     </footer>
 
     <script src="JS/menu.js"></script>
