--- a/order.html
+++ b/order.html
@@ -105,14 +105,17 @@
     </main>
 
     <footer>
-        <p>Copyright &copy;2020 FoodEnd.</p>
-        <div id="icon">
-            <img src="img/fb-icon.png">
-            <img src="img/gp-icon.png">
-            <img src="img/insta-icon.png">
-            <img src="img/logo.png" height="24px">
-            <img src="img/twit-icon.png">
-          </div>
+        <p id="p">
+          Copyright &copy;2020 FoodEnd
+            
+        </p>
+          <div id="icon">
+          <img src="img/fb-icon.png">
+          <img src="img/gp-icon.png">
+          <img src="img/insta-icon.png">
+          <img src="img/logo.png" height="24px">
+          <img src="img/twit-icon.png">
+        </div>
     </footer>
     <script src="/JS/order.js"></script>
 </body>
