--- a/order.html
+++ b/order.html
@@ -68,11 +68,11 @@
                 width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" id="map"></iframe>
             <div class="newForm">
                 <div class="form-style-3">
-                    <form >
+                    <form id="theform">
                     <fieldset><legend>Personal</legend>
-                    <label for="field1"><span>First Name <span class="required">*</span></span><input type="text" class="input-field" name="field1" value="" /></label>
-                    <label for="field2"><span>Last Name <span class="required">*</span></span><input type="text" class="input-field" name="field2" value="" /></label>
-                    <label for="field3"><span>Phone number <span class="required">*</span></span><input type="text" class="input-field" name="field3" value="" /></label>
+                    <label for="field1"><span>First Name <span class="required">*</span></span><input id="fName" type="text" class="input-field" name="field1" value="" /></label>
+                    <label for="field2"><span>Last Name <span class="required">*</span></span><input id="lName" type="text" class="input-field" name="field2" value="" /></label>
+                    <label for="field3"><span>Phone number <span class="required">*</span></span><input id="phone" type="text" class="input-field" name="field3" value="" /></label>
                     <label for="field4"><span>Location</span><select name="field4" class="select-field">
                     <option value="Appointment">Abu Nusair</option>
                     <option value="2">Al-Abdalli</option>
@@ -96,7 +96,7 @@
                     </fieldset>
                     <fieldset><legend>Message</legend>
                     <label for="field6"><span>Message <span class="required">*</span></span><textarea name="field6" class="textarea-field"></textarea></label>
-                    <label><span> </span><input type="submit" value="Submit" id="lastBtn"/></label>
+                    <label id='welcome'><span> </span><input type="submit" value="Submit" id="lastBtn"/></label>
                     </fieldset>
                     </form>
                     </div>
