--- a/order.html
+++ b/order.html
@@ -69,7 +69,7 @@
             <div class="newForm">
                 <div class="form-style-3">
                     <form id="theform">
-                    <fieldset><legend>Personal</legend>
+                    <fieldset ><legend>Personal</legend>
                     <label for="field1"><span>First Name <span class="required">*</span></span><input id="fName" type="text" class="input-field" name="field1" value="" /></label>
                     <label for="field2"><span>Last Name <span class="required">*</span></span><input id="lName" type="text" class="input-field" name="field2" value="" /></label>
                     <label for="field3"><span>Phone number <span class="required">*</span></span><input id="phone" type="text" class="input-field" name="field3" value="" /></label>
@@ -94,7 +94,7 @@
                         <option value="18">Badr</option>
                     </select></label>
                     </fieldset>
-                    <fieldset><legend>Message</legend>
+                    <fieldset id="field"><legend>Message</legend>
                     <label for="field6"><span>Message <span class="required">*</span></span><textarea name="field6" class="textarea-field"></textarea></label>
                     <label id='welcome'><span> </span><input type="submit" value="Submit" id="lastBtn"/></label>
                     </fieldset>
