add new animations on about-us

--- a/about-us.html
+++ b/about-us.html
@@ -50,29 +50,41 @@
     <main>
         <p id="paraTalk">
             <br>
-            <h2 id="npng"> N.P.N.G</h2>
+            <div class="newDesign">
+                <svg viewBox="0 0 960 300">
+                    <symbol id="s-text">
+                        <text text-anchor="middle" x="50%" y="80%">N.P.N.G</text>
+                    </symbol>
+
+                    <g class="g-ants">
+                        <use xlink:href="#s-text" class="text-copy"></use>
+                        <use xlink:href="#s-text" class="text-copy"></use>
+                        <use xlink:href="#s-text" class="text-copy"></use>
+                        <use xlink:href="#s-text" class="text-copy"></use>
+                        <use xlink:href="#s-text" class="text-copy"></use>
+                    </g>
+                </svg>
+            </div>
+
             <h4 id="talk"> We Are A Group Of People Had Met By Coincidence And Have To Work Togther At The Same Project.
             </h4>
         </p>
 
 
-        <!-- ...................... -->
         <section class="lightinfo">
-            <!-- first div  -->
-            <div class="members2">
-                <p class="inspara">
-                    <h2 class="name">Ibrahim:</h2>
+            <p class="inspara">
+                <h2 class="name">Ibrahim:</h2>
+                <h4 class="h4">
+                    <h3 class="h3">The Boss</h3>
                     <h4 class="h4">
-                        <h3 class="h3">The Boss</h3>
-                        <h4 class="h4">
-                            Power: 99.9%. <br>
-                            thinking: S-high. <br>
-                            word: <br>
+                        Power: 99.9%. <br>
+                        thinking: S-high. <br>
+                        word: <br>
 
-                            <i> 'do you have <br> any complains?'</i></h4>
+                        <i> 'do you have <br> any complains?'</i></h4>
 
-                </p>
-                <img class="imgpirso" src="about-us-imgs/gru.jpg" alt="##">
+            </p>
+            <img class="imgpirso" src="about-us-imgs/gru.jpg" alt="##">
 
             </div>
         </section>
@@ -232,19 +244,19 @@
     <footer>
 
         <p id="p">
-          Copyright &copy;2020 FoodEnd
-            
+            Copyright &copy;2020 FoodEnd
+
         </p>
-          <div id="icon">
-          <img src="img/fb-icon.png">
-          <img src="img/gp-icon.png">
-          <img src="img/insta-icon.png">
-          <img src="img/logo.png" height="24px">
-          <img src="img/twit-icon.png">
+        <div id="icon">
+            <img src="img/fb-icon.png">
+            <img src="img/gp-icon.png">
+            <img src="img/insta-icon.png">
+            <img src="img/logo.png" height="24px">
+            <img src="img/twit-icon.png">
         </div>
 
     </footer>
-
+    <script src="/JS/about-us.js"></script>
 </body>
 
 </html>
