--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
         <p id="p">
           Copyright &copy;2020 FoodEnd
           <div id="icon">
-            <img src="img/fb-icon.png">
-            <img src="img/gp-icon.png">
-            <img src="img/insta-icon.png">
-            <img src="img/logo.png" height="24px">
-            <img src="img/twit-icon.png">
+            <img src="IMG/fb-icon.png">
+            <img src="IMG/gp-icon.png">
+            <img src="IMG/insta-icon.png">
+            <img src="IMG/logo.png" height="24px">
+            <img src="IMG/twit-icon.png">
           </div>
         </p>
           
