--- a/about-us.html
+++ b/about-us.html
@@ -72,6 +72,7 @@
 
 
         <section class="lightinfo">
+            <div class="members2">
             <p class="inspara">
                 <h2 class="name">Ibrahim:</h2>
                 <h4 class="h4">
