--- a/about-us.html
+++ b/about-us.html
@@ -196,7 +196,7 @@
                             thinking: Logical. <br>
                             word: <br>
 
-                            <i> 'Maaan!'</i></h4>
+                            <i> 'Why Maaan!'</i></h4>
 
                 </p>
                 <img class="imgpirso" src="about-us-imgs/bashar.jpg" alt="##">
@@ -214,7 +214,7 @@
                             thinking: Critical. <br>
                             word: <br>
 
-                            <i> 'Good Job'</i></h4>
+                            <i> 'Great Job'</i></h4>
 
                 </p>
                 <img class="imgpirso" src="about-us-imgs/samer.jpg" alt="##">
@@ -224,7 +224,7 @@
 
             <div class="teacDiv">
                 <p class="inspara">
-                    <h2 class="name">MRS.Razan:</h2>
+                    <h2 class="name">MS.Razan:</h2>
                     <h4 class="h4">
                         <h3 class="h3teac">The Professor</h3>
                         <h4 class="h4">
@@ -233,7 +233,7 @@
                             thinking: XX-high. <br>
                             word: <br>
 
-                            <i> 'I Love It Wallah'</i></h4>
+                            <i> 'Love It Wallah'</i></h4>
 
                 </p>
                 <img class="imgpirso" src="about-us-imgs/razan2.jpg" alt="##">
