--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
        <div class="para">
          
          <p id="para">Delicious <br> and <br>
-          healthy food</p>
+          healthy</p>
        </div>
         </div>
         <!-- <div class="images"> -->
@@ -135,8 +135,6 @@
           <img src="IMG/logo.png" height="24px">
           <img src="IMG/twit-icon.png">
         </div>
-=======
-   
         </p>
           
 
