delete / from order  js

--- a/order.html
+++ b/order.html
@@ -118,7 +118,8 @@
           
 
     </footer>
-    <script src="/JS/order.js"></script>
+    <script src="JS/order.js"></script>
+    <script src="JS/menu.js"></script>
 </body>
 
 </html>
