--- a/about-us.html
+++ b/about-us.html
@@ -66,7 +66,7 @@
                 </svg>
             </div>
 
-            <h4 id="talk"> We Are A Group Of People Had Met By Coincidence And Have To Work Togther At The Same Project.
+            <h4 id="talk"> The Incredible Team Members.
             </h4>
         </p>
 
@@ -165,13 +165,13 @@
 
                     <h4 class="h4">
                         Power: 150% <br>
-                        thinking: SMART. <br>
+                        thinking:  SMART. <br>
                         word: <br>
                         <i> 'I did it.! <br>
                             Wee did it! '</i></h4>
 
                 </p>
-                <img class="imgpirso" src="about-us-imgs/firemin.webp" alt="##">
+                <img class="imgpirso"  src="IMG/minions.png" alt="##">
 
             </div>
         </section>
